--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -49,7 +49,7 @@
     top: 3%;
     height: 110%;
     width: 100%;
-    background: white;
+    background: #e5e3db;
     border-left: 2px solid;
     animation: typing 3s steps(10) infinite;
   }
